--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     const visitBtn = document.getElementById('visitBtn');
     visitBtn.addEventListener('click', () => {
-      window.open('file:///C:/Users/calll/OneDrive/Desktop/INDEX/Untitled-1.html');
+      window.open('page2.html');
     });
   </script>
  
