--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Monthsary Envelope</title>
+  <title>6 months!</title>
   <style>
     body {
       background: #ffe6f0;
@@ -71,9 +71,24 @@
     .envelope.open .letter {
       opacity: 1;
     }
+
+
+
+  body {
+    background: url('playhouse-bye-flowers.gif') no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    font-family: 'Georgia', cursive;
+    text-align: center;
+  }
+
+
   </style>
 </head>
 <body>
+
+
 
   <button id="openBtn">Open Me Please 💌</button>
  
