--- a/page2.html
+++ b/page2.html
@@ -2,21 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Monthsary!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>For my baby</title>
   <style>
     body {
-      background: #ffe6f0;
+      background: url('playhouse-bye-flowers.gif') no-repeat center center fixed;
+      background-size: cover;
       font-family: 'Georgia', cursive;
       text-align: center;
-      padding: 50px;
+      margin: 0;
+      padding: 20px;
     }
 
-@keyframes bgShift {
-  0% { background-position: 0% 50%; }
-  100% { background-position: 100% 50%; }
-}
+    .envelope-container {
+      margin: 40px 0;
+    }
 
-    h1 {
+    .openBtn {
+      font-size: 24px;
+      padding: 10px 20px;
+      cursor: pointer;
+      background-color: pink;
+      border: none;
+      border-radius: 10px;
+    }
+
+    .envelope {
+      display: none;
+      margin-top: 20px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 15px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .fade-in {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+
+     h1 {
       color: #ff3399;
       font-size: 3em;
     }
@@ -72,76 +100,147 @@
   100% { transform: translateY(0px); }
 }
 
-
   </style>
 </head>
 <body>
+
+
+  
   <div class="heart">❤️</div>
   <h1 class="floating-text">Hello, My Love!</h1>
 <div><p class="floating-text">Happy 6th monthsary! Here are just a few of my favorite memories with you 
   <div><p class="floating-text"> (though every one with you feels like my favorite :) )</p></div>
 
-  
-  <div><img src="us1.webp"  class="fade-in"></div>
-  <p> <i>Our most recent date :)</i></p>
-  <p>Being with you makes me the happiest person alive, my love. </p>
-  <p>Your love, your warmth, your hugs, and your kisses, they’re everything I need.</p> 
+
+  <!-- Envelope 1 -->
+  <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+      <img src="us1.webp" class="fade-in">
+      <p><i>Our most recent date :)</i></p>
+      <p>Being with you makes me the happiest person alive, my love.</p>
+      <p>Your love, your warmth, your hugs, and your kisses, they’re everything I need.</p>
+    </div>
+  </div>
+
+  <!-- Envelope 2 -->
+  <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+      <img src="us2.webp" class="fade-in">
+      <p><i>Getting your milktea :)</i></p>
+      <p>You were so affectionate and clingy, and I loved every second of it.</p>
+      <p>I can’t wait to see you again :)</p>
+    </div>
+  </div>
+
+  <!-- Envelope 3 -->
+  <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+      <img src="us3.webp" class="fade-in">
+      <p><i>MY BABY AND A BABY</i></p>
+      <p>Seeing you pet the cat so gently and lovingly made me smile so much.</p>
+      <p>You are the sweetest, and I'm so lucky to have you, love of my life.</p>
+    </div>
+  </div>
 
 
-  <img src="us2.webp" alt="Us Together" class="fade-in">
-  <p><i>Getting your milktea :)</i></p>
-  <p>You were so affectionate and clingy, and I loved every second of it. </p>
-  <p>I can’t wait to see you again:) </p>
-  
-  <img src="us3.webp" alt="Us Together" class="fade-in">
-  <p><i>MY BABY AND A BABY</i></p>
-  <p>Seeing you pet the cat so gently and lovingly made me smile so much.</p>
-  <p>You are the sweetest, and I'm so lucky to have you, love of my life.</p>
-
-  <img src="us4.webp" class="fade-in">
+  <!-- Envelope 4 -->
+    <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+      <img src="us4.webp" class="fade-in">
   <p><i>Staying with you while you sleep :)</i></p>
   <p>Thank you for letting me stay with you and keep you company while you sleep, my baby.</p>
   <p>I just want to wrap you in my arms and keep you safe.</p>
+ </div>
+  </div>
 
-
-  <img src="us6.webp" alt="Us Together" class="fade-in">
+  <!-- Envelope 5 -->
+   <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+<img src="us6.webp" alt="Us Together" class="fade-in">
   <p><i>MY CUTE BABY</i></p>
   <p>YOU SAY YOU LOOK LIKE A POTATO HERE BUT I COMPLETELY DISAGREE.</p>
   <p>YOU LOOK SO CUTE AND BEAUTIFUL HERE, MY LOVE.</p>
   <p>You're like an adorable pokemon that I want to hug and always carry with me.</p>
+   </div>
+  </div>
 
+  <!-- Envelope 6 -->
+   <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
   <img src="us5.webp" alt="Us Together" class="fade-in">
   <p><i>Beautiful angel of mine:)</i></p>
   <p>This isnt exactly a memory of us, I just wanted to include this hehe. You are so beautiful, my love.</p>
   <p>Your smile is so warm and bright, and your eyes are so beautiful.</p>
   <p>I love you so much, my love:)</p>
-  
+   </div> 
+  </div>
+
+
+  <!-- Envelope 7 -->
+   <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
   <img src="us8.webp" class="fade-in">
   <p><i>Genuinely, how can anyone be this beautiful?</i></p>
   <p>One look at your smile and I simply melt away;</p>
   <p>I become nothing else but yours.</p>
   <p>My Bea, the stars themselves seem to reside within your eyes, </p>
   <p>and I’m forever lost in their light.</p>
+  </div>
+  </div>
 
-  <img src="us9.webp" class="fade-in">
+  <!-- Envelope 8 -->
+   <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+       <img src="us9.webp" class="fade-in">
   <p><i>The sweetest girlfriend and a lucky birthday boy:)</i></p>
   <p>I still can’t believe you got me the Senna Lego for my birthday.</p>
   <p>It means so much to me, my baby--the gift itself, and the thought and love behind it.</p>
   <p>And thank you for staying with me while I opened and built it:)</p>
+ </div>
+  </div>
 
-  <img src="us10.webp" class="fade-in">
+  <!-- Envelope 9 -->
+   <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+       <img src="us7.webp" class="fade-in">
+        <img src="us10.webp" class="fade-in">
   <p><i>Our first date! :)</i></p>
   <p> I finally got to see you, and even though our time together was short, every second felt so special.</p>
   <p>Just being with you made everything so much better.</p>
   <p>February 6 has a special place in my heart:)</p>
+    </div>
+   </div>
 
-  <br><br>
-  <p>Thank you for being my everything, my love. </p>
-  <p>We’ve got so many adventures ahead, and I can’t wait to share every moment with you.</p>
-  <p> Happy 6 months again! I love you so much, my baby:)</p>
+  <!-- Final Envelope -->
+  <div class="envelope-container">
+    <button class="openBtn">💌</button>
+    <div class="envelope">
+      <p>Thank you for being my everything, my love.</p>
+      <p>We’ve got so many adventures ahead, and I can’t wait to share every moment with you.</p>
+      <p>Happy 6 months again! I love you so much, my baby :)</p>
+      <br>
+      <p>Yours Always,<br><i>Your Batman</i></p>
+      <img src="cat-kiss.gif" style="width: 20%; border-radius: 10px; margin-top: 10px;">
+    </div>
+  </div>
 
-  <br><br>
-  <p>Yours Always,<br><i>Your Batman</i></p>
-  <img src="cat-kiss.gif" style="width:20%; border-radius: 10px; margin-top: 10px;">
+  <script>
+    document.querySelectorAll('.openBtn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const envelope = btn.nextElementSibling;
+        envelope.style.display = 'block';
+        btn.style.display = 'none';
+      });
+    });
+  </script>
 </body>
 </html>
