--- a/page2.html
+++ b/page2.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For my baby</title>
   <style>
-    body {
-      background: url('playhouse-bye-flowers.gif') no-repeat center center fixed;
-      background-size: cover;
+  body {
+      background: #ffe6f0;
       font-family: 'Georgia', cursive;
       text-align: center;
-      margin: 0;
-      padding: 20px;
+      padding: 50px;
     }
 
     .envelope-container {
